# isegoria-core

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  isegoria-core.cpp  isegoria-core.h  vcpkg.json
auth/: JwtVerifier.cpp  JwtVerifier.hpp
handler/: AuthHandler.cpp  AuthHandler.hpp  ChatHandler.cpp  ChatHandler.hpp  StatusHandler.cpp  StatusHandler.hpp  VoiceHandler.cpp  VoiceHandler.hpp
heartbeat/: HeartbeatManager.cpp  HeartbeatManager.hpp
infra/: SpringClient.cpp  SpringClient.hpp
network/: Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  TCPListener.cpp  TCPListener.hpp  UDPListener.cpp  UDPListener.hpp
protocol/: Packet.hpp  PacketTypes.hpp
room/: RoomManager.cpp  RoomManager.hpp  VoiceRouter.cpp  VoiceRouter.hpp
utils/: Env.hpp  IdGenerator.hpp  Logger.hpp
